--- a/ImageTracerGui/MainWindow.xaml
+++ b/ImageTracerGui/MainWindow.xaml
@@ -8,7 +8,9 @@
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <!--<WebBrowser x:Name="Browser" Margin="10"/>-->
-        <Image x:Name="ImageDisplay" Margin="10,10,90,10"/>
+        <Viewbox Margin="10,10,90,10">
+            <Image x:Name="ImageDisplay" Stretch="Uniform"/>
+        </Viewbox>
         <Button x:Name="Part1Button" Content="Part 1" Margin="0,10,10,0" Click="Part1Button_Click" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top"/>
         <Button x:Name="Part2Button" Content="Part 2" HorizontalAlignment="Right" Margin="0,35,10,0" Width="75" Click="Part2Button_Click" Height="20" VerticalAlignment="Top"/>
         <Button x:Name="Part3Button" Content="Part 3" Margin="0,60,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="Part3Button_Click"/>
