--- a/ImageTracerGui/MainWindow.xaml
+++ b/ImageTracerGui/MainWindow.xaml
@@ -9,12 +9,12 @@
     <Grid>
         <!--<WebBrowser x:Name="Browser" Margin="10"/>-->
         <Image x:Name="ImageDisplay" Stretch="Uniform" RenderOptions.BitmapScalingMode="NearestNeighbor"  Margin="10,10,90,10"/>
-        <Button x:Name="Part1Button" Content="Part 1" Margin="0,10,10,0" Click="Part1Button_Click" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top"/>
-        <Button x:Name="Part2Button" Content="Part 2" HorizontalAlignment="Right" Margin="0,35,10,0" Width="75" Click="Part2Button_Click" Height="20" VerticalAlignment="Top"/>
-        <Button x:Name="Part3Button" Content="Part 3" Margin="0,60,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="Part3Button_Click"/>
+        <Button x:Name="Part1Button" Content="Read" Margin="0,10,10,0" Click="Part1Button_Click" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top"/>
+        <Button x:Name="Part2Button" Content="Palette-ize" HorizontalAlignment="Right" Margin="0,35,10,0" Width="75" Click="Part2Button_Click" Height="20" VerticalAlignment="Top"/>
+        <Button x:Name="Part3Button" Content="Layer-ize" Margin="0,60,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="Part3Button_Click"/>
         <ComboBox x:Name="Part3ComboBox" Margin="0,85,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" SelectionChanged="Part3ComboBox_SelectionChanged">
             <ComboBox.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate DataType="local:ColorSelectionItem">
                     <StackPanel Orientation="Horizontal">
                         <Rectangle Fill="{Binding Color}" Width="16" Height="16" Margin="0,2,5,2" />
                         <TextBlock Text="{Binding Index}" />
@@ -22,6 +22,16 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
-        <Button x:Name="Part4Button" Content="Part 4" Margin="0,112,10,0" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top" Click="Part4Button_Click"/>
+        <Button x:Name="Part4Button" Content="Path-ize" Margin="0,112,10,0" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top" Click="Part4Button_Click"/>
+        <ComboBox x:Name="Part4ComboBox" Margin="0,137,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" SelectionChanged="Part4ComboBox_SelectionChanged">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="local:ColorSelectionItem">
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Fill="{Binding Color}" Width="16" Height="16" Margin="0,2,5,2" />
+                        <TextBlock Text="{Binding Index}" />
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
     </Grid>
 </Window>
