--- a/ImageTracerGui/MainWindow.xaml
+++ b/ImageTracerGui/MainWindow.xaml
@@ -9,6 +9,9 @@
     <Grid>
         <!--<WebBrowser x:Name="Browser" Margin="10"/>-->
         <Image x:Name="ImageDisplay" Stretch="Uniform" RenderOptions.BitmapScalingMode="NearestNeighbor"  Margin="10,10,150,10"/>
+        <Viewbox Stretch="Uniform" Margin="10,10,150,10">
+            <Grid x:Name="LineGrid"/>
+        </Viewbox>
         <Button x:Name="Part1Button" Content="Read" Margin="0,10,70,0" Click="Part1Button_Click" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top"/>
         <Button x:Name="Part2Button" Content="Palette-ize" HorizontalAlignment="Right" Margin="0,35,70,0" Width="75" Click="Part2Button_Click" Height="20" VerticalAlignment="Top"/>
         <Button x:Name="Part3Button" Content="Layer-ize" Margin="0,60,70,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="Part3Button_Click"/>
@@ -37,5 +40,6 @@
         <Label x:Name="LayerPixelCount" Content="" Margin="0,85,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
         <Label x:Name="PathCount" Content="" Margin="0,112,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
         <Label x:Name="PathPointsCount" Content="" Margin="0,137,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
+
     </Grid>
 </Window>
