--- a/ImageTracerGui/MainWindow.xaml
+++ b/ImageTracerGui/MainWindow.xaml
@@ -10,7 +10,7 @@
         <!--<WebBrowser x:Name="Browser" Margin="10"/>-->
         <Image x:Name="ImageDisplay" Stretch="Uniform" RenderOptions.BitmapScalingMode="NearestNeighbor"  Margin="10,10,150,10"/>
         <Viewbox Stretch="Uniform" Margin="10,10,150,10">
-            <Grid x:Name="LineGrid"/>
+            <Canvas x:Name="LineGrid"/>
         </Viewbox>
         <Button x:Name="Part1Button" Content="Read" Margin="0,10,70,0" Click="Part1Button_Click" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top"/>
         <Button x:Name="Part2Button" Content="Palette-ize" HorizontalAlignment="Right" Margin="0,35,70,0" Width="75" Click="Part2Button_Click" Height="20" VerticalAlignment="Top"/>
