Created the interpolation lines overlay. There is only an overlay of all of the lines currently. Will create selectable lines next.

--- a/ImageTracerGui/MainWindow.xaml
+++ b/ImageTracerGui/MainWindow.xaml
@@ -15,6 +15,7 @@
         <Button x:Name="Part1Button" Content="Read" Margin="0,10,70,0" Click="Part1Button_Click" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top"/>
         <Button x:Name="Part2Button" Content="Palette-ize" HorizontalAlignment="Right" Margin="0,35,70,0" Width="75" Click="Part2Button_Click" Height="20" VerticalAlignment="Top"/>
         <Button x:Name="Part3Button" Content="Layer-ize" Margin="0,60,70,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="Part3Button_Click"/>
+        <Label x:Name="LayerCount" Content="" Margin="0,60,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
         <ComboBox x:Name="Part3ComboBox" Margin="0,85,70,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" SelectionChanged="Part3ComboBox_SelectionChanged">
             <ComboBox.ItemTemplate>
                 <DataTemplate DataType="local:ColorSelectionItem">
@@ -25,7 +26,9 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
+        <Label x:Name="LayerPixelCount" Content="" Margin="0,85,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
         <Button x:Name="Part4Button" Content="Path-ize" Margin="0,112,70,0" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top" Click="Part4Button_Click"/>
+        <Label x:Name="PathCount" Content="" Margin="0,112,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
         <ComboBox x:Name="Part4ComboBox" Margin="0,137,70,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" SelectionChanged="Part4ComboBox_SelectionChanged">
             <ComboBox.ItemTemplate>
                 <DataTemplate DataType="local:ColorSelectionItem">
@@ -36,10 +39,8 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
-        <Label x:Name="LayerCount" Content="" Margin="0,60,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
-        <Label x:Name="LayerPixelCount" Content="" Margin="0,85,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
-        <Label x:Name="PathCount" Content="" Margin="0,112,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
         <Label x:Name="PathPointsCount" Content="" Margin="0,137,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
-
+        <Button x:Name="Part5Button" Content="Interp-ize" Margin="0,164,70,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="Part5Button_Click"/>
+        <Label x:Name="InterpCount" Content="" Margin="0,164,10,0" VerticalAlignment="Top" Height="20" FontSize="10" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="55"/>
     </Grid>
 </Window>
