--- a/ImageTracerGui/MainWindow.xaml
+++ b/ImageTracerGui/MainWindow.xaml
@@ -67,5 +67,6 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
+        <Button x:Name="Part8Button" Content="Svg-ize" Margin="0,293,70,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="Part8Button_Click"/>
     </Grid>
 </Window>
